# blacken

./: .gitignore  Cargo.toml  license  readme.md
src/: main.rs
